--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
     background: #33ccff;
 }
 
+
+/* Pet Commands */
 .pet-command {
     width: 30%;
     display: inline-block;
@@ -23,4 +25,44 @@ body {
 .pet-command h2 {
     font-size: 20px;
     width: 100%;
+}
+
+.pet-command img:hover {
+    transform: rotate( 25deg );
+    -webkit-transform: rotate( 25deg );
+}
+
+/* Pet Status Meters */
+#pet-stats {
+    margin-top: 50px;
+}
+
+.pet-stat-meter {
+    max-width: 500px;
+    margin: 0 auto;
+    width: 100%;
+    height: 60px;
+}
+
+.pet-stat-label {
+    font-size: 20px;
+    float: left;
+    margin: 0;
+}
+
+.pet-stat-bar {
+    float: right;
+    width: 155px;
+    font-size: 20px;
+    position: relative;
+    letter-spacing: 10px;
+}
+
+.pet-stat-mood-level {
+    position: absolute;
+    margin-top: 5px;
+    margin-left: 10px;
+    height: 11px;
+    width: 10%;
+    background: rgba( 200, 20, 20, 0.5);
 }
