--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 #pet-container {
     width: 200px;
     margin: 0 auto;
-    background: #33ccff;
+    background: rgba( 200, 20, 200, 0.5);
 }
 
 
@@ -34,14 +34,13 @@ body {
 
 /* Pet Status Meters */
 #pet-stats {
-    margin-top: 50px;
+    max-width: 420px;
+    margin: 50px auto;
 }
 
 .pet-stat-meter {
-    max-width: 500px;
-    margin: 0 auto;
     width: 100%;
-    height: 60px;
+    height: 40px;
 }
 
 .pet-stat-label {
@@ -64,5 +63,6 @@ body {
     margin-left: 10px;
     height: 11px;
     width: 10%;
-    background: rgba( 200, 20, 20, 0.5);
+    background: rgba( 200, 20, 20, 0.75);
+    -webkit-transition: width, 1s;
 }
